# dbx-vibe-coding

./: .gitignore  API_CONTRACT.md  Dockerfile  README-CICD.md  README.md  databricks.yml  main.py  pyproject.toml
.cursor/rules/: cursor-rules.mdc  python-best-practices.mdc
.github/workflows/: cd.yml  ci.yml  security.yml
backend/: databricks_job_terraform_translate.py  middleware.py
examples/: example_usage.py
frontend/: .flake8  app.py  app.yaml  config.py  middleware.py  model_serving.py  pyproject.toml  requirements-dev.txt  requirements.txt
frontend/tests/: test_app.py  test_smoke.py
resources/: app.yml
